--- a/kde/kzones-layout.conf
+++ b/kde/kzones-layout.conf
@@ -1,1 +1,84 @@
+[
+    {
+        "name": "Priority Grid",
+        "padding": 0,
+        "zones": [
+            {
+                "x": 0,
+                "y": 0,
+                "height": 100,
+                "width": 50
+            },
+            {
+                "x": 50,
+                "y": 0,
+                "height": 100,
+                "width": 50
+            }
+        ]
+    },
+    {
+        "name": "Quadrant Grid",
+        "zones": [
+            {
+                "x": 0,
+                "y": 0,
+                "height": 50,
+                "width": 50
+            },
+            {
+                "x": 0,
+                "y": 50,
+                "height": 50,
+                "width": 50
+            },
+            {
+                "x": 50,
+                "y": 50,
+                "height": 50,
+                "width": 50
+            },
+            {
+                "x": 50,
+                "y": 0,
+                "height": 50,
+                "width": 50
+            }
+        ]
+    },
+    {
+        "name": "3-Way Split",
+        "zones": [
+            {
+                "x": 0,
+                "y": 0,
+                "height": 100,
+                "width": 33.33
+            },
+            {
+                "x": 33.33,
+                "y": 0,
+                "height": 100,
+                "width": 33.33
+            },
+            {
+                "x": 66.66,
+                "y": 0,
+                "height": 100,
+                "width": 33.33
+            }
+        ]
+    },
+    {
+        "name": "1-Way Split",
+        "zones": [
+            {
+                "x": 0,
+                "y": 0,
+                "height": 100,
+                "width": 100
+            }
+        ]
+    }
+]
 
